feat: aded about us page

--- a/src/lib/i18n/en/home.json
+++ b/src/lib/i18n/en/home.json
@@ -4,5 +4,15 @@
         "subtitle": "Your Gateway to a New Life in Malaysia",
         "description": " With the My Malaysia Second Home program, we are dedicated to making your transition to living in Malaysia seamless, exciting, and hassle-free. Whether you're seeking a retirement haven, a thriving business environment, or a vibrant lifestyle, Malaysia offers numerous opportunities for expatriates to thrive.",
         "learn_more": "Learn More"
+    },
+    "why_us": {
+        "header": "WHY CHOOSE US",
+        "title": "SOME OF THE REASONS WHY SKYWALKER",
+        "card_title": ""
+    },
+    "about": {
+        "header": "ABOUT US",
+        "title": "Your Trusted Partner in Malaysian Living",
+        "description": " Skywalker MM2H Sdn Bhd is a premier consultancy service specializing in helping individuals and families navigate the My Malaysia Second Home (MM2H) program. With years of experience, we provide comprehensive support to ensure your move is smooth and rewarding."
     }
 }
