feat: added testimonials part

--- a/src/lib/i18n/en/home.json
+++ b/src/lib/i18n/en/home.json
@@ -14,5 +14,10 @@
         "header": "ABOUT US",
         "title": "Your Trusted Partner in Malaysian Living",
         "description": " Skywalker MM2H Sdn Bhd is a premier consultancy service specializing in helping individuals and families navigate the My Malaysia Second Home (MM2H) program. With years of experience, we provide comprehensive support to ensure your move is smooth and rewarding."
+    },
+    "testimonial": {
+        "header": "CUSTOMER TESTIMONIALS",
+        "title1": "Delighting Our Customers,",
+        "title2": "One Smile At A Time"
     }
 }
