chores: added animation to homepage

--- a/src/lib/i18n/en/home.json
+++ b/src/lib/i18n/en/home.json
@@ -29,10 +29,11 @@
             "2": "Attractive Financial Benefits",
             "3": "Flexible Residency Requirements",
             "4": "Access to Affordable Healthcare",
-            "5": "Option to bring your family along",
-            "6": "Strategic Business and Work Opportunities",
-            "7": "Special Johor Economic Zone Advantages",
-            "8": "Enhanced Family Lifestyle"
+            "5": "Option to Bring Your Family Along",
+            "6": "Strategic Work Opportunities",
+            "7": "Johor Economic Zone Advantages",
+            "8": "Enhanced Family Lifestyle",
+            "9": "Safe Living Environment"
         }
     }
 }
