--- a/src/lib/i18n/zh/our-service.json
+++ b/src/lib/i18n/zh/our-service.json
@@ -14,5 +14,27 @@
                 "2": "马来西亚获得海外华侨身份的门槛较低，可享受税收优惠、高考加分、二胎资格等额外优势。在出国留学前先解决移民问题，确保稳定性并为未来发展奠定坚实基础。"
             }
         }
+    },
+    "retirement": {
+        "header": "退休福利",
+        "title": "为什么马来西亚是理想的退休地点",
+        "section1": {
+            "title": "1. 适合长者的充实生活",
+            "description": "马来西亚为退休人士提供了一个幸福和满足的天堂。凭借其热情好客、充满活力的文化和经济实惠的生活，这里能为不同兴趣的人士提供快乐而充实的生活方式。"
+        },
+        "section2": {
+            "title": "2. 无与伦比的生活品质",
+            "benefits": {
+                "1": "马来西亚以其先进的基础设施、壮丽的自然景观和世界级的医疗设施，被誉为亚洲最佳居住地。",
+                "2": "全年清新的空气和宜人的气候（21-32摄氏度），没有地震、海啸和火山等地质自然灾害。"
+            }
+        },
+        "section3": {
+            "title": "3. 适合退休的环境",
+            "benefits": {
+                "1": "广泛使用的华语和与中国相似的文化使马来西亚成为华语地区退休人士的首选。庞大的华人人口确保退休人士能享有熟悉和舒适的环境。",
+                "2": "投资友好的政策允许退休人士将休闲与理财机会相结合，创造和谐的平衡。"
+            }
+        }
     }
 }
