--- a/src/lib/i18n/en/home.json
+++ b/src/lib/i18n/en/home.json
@@ -1,6 +1,6 @@
 {
     "home": {
-		"title": "Welcome to My Malaysia Second Home Program",
+        "title": "Welcome to My Malaysia Second Home Program",
         "subtitle": "Your Gateway to a New Life in Malaysia",
         "description": " With the My Malaysia Second Home program, we are dedicated to making your transition to living in Malaysia seamless, exciting, and hassle-free. Whether you're seeking a retirement haven, a thriving business environment, or a vibrant lifestyle, Malaysia offers numerous opportunities for expatriates to thrive.",
         "learn_more": "Learn More"
@@ -35,5 +35,25 @@
             "8": "Enhanced Family Lifestyle",
             "9": "Safe Living Environment"
         }
+    },
+    "contact": {
+        "title": "Ready to start your journey to Malaysia?",
+        "subtitle": "Contact us today!",
+        "header": "GET IN TOUCH",
+        "info_title": "Contact Information",
+        "phone_label": "Phone",
+        "phone_value": "+6012",
+        "email_label": "Email",
+        "email_value": "info@skywalkermm2h.com",
+        "address_label": "Address",
+        "address_value": "[Your Address Here]",
+        "social_title": "Follow us on Social Media",
+        "social_description": "Stay updated with the latest MM2H news and tips:",
+        "facebook_handle": "@SkywalkerMM2H",
+        "facebook_url": "https://facebook.com/SkywalkerMM2H",
+        "instagram_handle": "@SkywalkerMM2H",
+        "instagram_url": "https://instagram.com/SkywalkerMM2H",
+        "linkedin_handle": "Skywalker MM2H Sdn Bhd",
+        "linkedin_url": "https://linkedin.com/company/skywalker-mm2h"
     }
 }
